--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,8 @@
+html, #root {
+  background-color: rgb(123, 178, 180);
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
